--- a/UI/style.css
+++ b/UI/style.css
@@ -62,8 +62,8 @@ a.btn{
 }
 
 nav {
-    position: fixed;
     width: 100%;
+    z-index: 999;
 }
 
 nav ul {
@@ -73,18 +73,7 @@ nav ul {
     overflow: hidden;
     margin: 0;
     transition: all 1s;
-}
-
-nav.black ul {
-    list-style: none;
-    background: #36373b;
-    overflow: hidden;
-    color: #fff;
-    padding: 0;
-    text-align: right;
-    margin: 0;
-    transition: all 1s;
-    z-index: 4;
+    
 }
 
 .showing {
@@ -98,11 +87,21 @@ nav ul li {
     text-align: center;
 }
 
+
+nav ul li a.current{
+    color: #fff;
+}
+
 nav ul li a {
     text-decoration: none;
-    color: #fff;
+    color: rgba(255, 255, 255, 0.7);
     font-size: 15px;
 }
+
+nav ul li a:hover {
+    opacity: 0.6;
+}
+
 
 .menu-icon {
     width: 100%;
@@ -115,7 +114,8 @@ nav ul li a {
     display: block;
 }
 
-#showcase{
+#showcase {
+    margin: 0;
     min-height: 600px;
     color: #fff;
     text-align: center;
@@ -124,7 +124,7 @@ nav ul li a {
 
  #bg-image {
     position: absolute; 
-   background: rgb(0, 0, 0);
+    background: rgb(0, 0, 0);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -196,7 +196,7 @@ nav ul li a {
 
 .fixed-image {
     position: absolute;
-    background: url('images/chopsticks-close-up-cuisine-699544.jpg') fixed;
+    background: url('images/fixedImage.jpg') fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -264,6 +264,75 @@ footer p {
     color: #d5d5d5;
 }
 
+/**************** SIGNUP $& LOGIN ***************/
+
+input[type="text"],
+input[type="password"],
+input[type="email"],
+input[type="tel"]{
+   border:  #756c5b7e 1px solid;
+   border-radius: 5px;
+   height: 30px;
+   width: 90%;
+   padding: 4px 6px;
+   font-size: .8em;
+}
+
+button[type="submit"]{
+    padding:0px 10px 2px 10px;
+    margin-right: 2em;
+    font-size: .8em;
+    border: none;
+    color: #ffffff;
+    border-radius: 5px;
+    height: 40px;
+    width: 91%;
+    background-color: #13212a;
+    transition : all 0.5s;
+}
+button[type="submit"]:hover{
+    opacity: 0.8;
+    cursor: pointer;
+} 
+
+#login,#signup {
+    position: relative;
+    margin-bottom: 5em;
+    padding: 0;
+}
+
+#login h1,#signup h1{
+    font-size: 25px;
+    padding: 2em 0 0.5em 0;
+    margin: 1em 0 0 0 ;
+    opacity: 0.7;
+    color: #000;
+    text-align: left;
+}
+
+#login span#remember{
+    font-size: .9em;
+}
+.login_content span#remember{
+    position:relative;
+    font-size: .9em;
+}
+
+#login a,#signup a,.login_content a{
+    text-decoration: none;
+    color: #13212a;
+    transition : all 0.5s;
+    font-size: .9em;
+}
+#login a:hover,#signup a:hover,.login_content a:hover{
+    opacity: 0.7;
+}
+ 
+/*sign in 
+#signup a{
+    margin-left:10px;
+}
+
 
 /* Media -query */
 @media (min-width: 700px) {
@@ -297,7 +366,6 @@ footer p {
         max-height: 5em;
         list-style: none;
         overflow: hidden;
-        color: #fff;
         padding: 0;
         text-align: right;
         margin: 0;
@@ -316,7 +384,6 @@ footer p {
 
     nav ul li a {
         text-decoration: none;
-        color: #fff;
         font-size: 17px;
     }
     nav ul li a:hover {
@@ -352,9 +419,8 @@ footer p {
         text-decoration: none;
         padding: 1em 2em;
         border: 1px solid #666;
-        margin: 3em 0 0 0;
-        
-    z-index: -2;
+        margin: 3em 0 0 0; 
+        z-index: -2;
         transition: all .5s;
     }
 
@@ -372,8 +438,6 @@ footer p {
     #section-a h2{
         padding: 1em 0 0 0;
     }
-
-
     /*section b */
     .box{
         padding: 1em 0 ;
@@ -420,8 +484,71 @@ footer p {
         font-size: .7em;
     }
     
+/**************** SIGNUP $& LOGIN ***************/
 
-    
-
-
+input[type="text"],
+input[type="password"],
+input[type="email"],
+input[type="tel"]{
+   border:  #756c5b7e 1px solid;
+   border-radius: 5px;
+   height: 30px;
+   width: 100%;
+   padding: 4px 6px;
+   font-size: 1em;
 }
+
+button[type="submit"]{
+    padding:0px 10px 2px 10px;
+    font-size: 1em;
+    border: none;
+    color: #ffffff;
+    border-radius: 5px;
+    height: 40px;
+    width: 103%;
+    background-color: #13212a;
+    transition : all 0.5s;
+}
+button[type="submit"]:hover{
+    opacity: 0.8;
+} 
+
+#login,#signup {
+    position: relative;
+    display: grid;
+    grid-template-columns:  1fr;
+    grid-gap: 1em;
+    margin: 0 5em 5em 5em;
+    padding: 0 5em;
+}
+
+#login h1,#signup h1{
+    font-size: 1.9em;
+    padding: 2em 0 0.5em 0;
+    margin: 2em 0 0 0 ;
+    opacity: 0.7;
+    color: #000;
+}
+}
+
+@media (min-width: 800px) {   
+#login,#signup {
+    position: relative;
+    display: grid;
+    grid-template-columns:  1fr;
+    grid-gap: 1em;
+    margin: 0 10em 5em 10em;
+    padding: 0 5em;
+}
+}
+
+@media (min-width: 900px) {   
+    #login,#signup {
+        position: relative;
+        display: grid;
+        grid-template-columns:  1fr;
+        grid-gap: 1em;
+        margin: 0 15em 7em 15em;
+        padding: 0 5em;
+    }
+    }
