--- a/UI/style.css
+++ b/UI/style.css
@@ -302,7 +302,7 @@ button[type="submit"]:hover{
 #login h1,#signup h1{
     font-size: 25px;
     padding: 2em 0 0em 0;
-    margin: 2em 0 0 0em ;
+    margin: 3em 0 .4em 0em ;
     opacity: 0.7;
     color: #000;
     text-align: center;
@@ -329,6 +329,13 @@ button[type="submit"]:hover{
     cursor: pointer;
 }
  
+/******************* Admin ***************/
+#admin nav ul {
+    padding: .5em;
+}
+#admin nav .menu{
+    display: none;
+}
 
 
 /* Media -query */
@@ -525,6 +532,14 @@ button[type="submit"]:hover{
     margin: 2em 0 0 0 ;
     opacity: 0.7;
     color: #000;
+}
+
+/******************* Admin ***************/
+#admin nav ul {
+    padding: .5em;
+}
+#admin nav .menu{
+    display: block;
 }
 }
 
