--- a/UI/style.css
+++ b/UI/style.css
@@ -9,6 +9,10 @@ body {
     text-align: center;
 }
 
+* {
+    box-sizing: border-box;
+}
+
 img {
     display: block;
     width: 100%;
@@ -70,7 +74,7 @@ nav {
 
 nav ul {
     max-height: 0px;
-    background: #36373b;
+    background: #13212a;
     list-style: none;
     overflow: hidden;
     margin: 0;
@@ -108,7 +112,7 @@ nav ul li a:hover {
 
 .menu-icon {
     width: 100%;
-    background: #36373b;
+    background: #13212a;
     text-align: right;
     box-sizing: border-box;
     padding: 0px 24px;
@@ -225,7 +229,7 @@ a.btns{
 /* footer */
 #footer{
     padding: 2em;
-    background: #1a2025;
+    background: #13212a;
     color: #fff;
     font-size: 1.2em;
     text-align: center;
@@ -282,6 +286,12 @@ button[type="submit"]{
    font-size: .8em;
 }
 
+input[type='checkbox']{
+    margin-right: 20em;
+}
+#remember {
+    text-align: left;
+}
 button[type="submit"]{
     color: #ffffff;
     height: 40px;
@@ -294,19 +304,20 @@ button[type="submit"]:hover{
     cursor: pointer;
 } 
 
+
 #login,#signup {
     position: relative;
-    margin-bottom: 5em;
-    padding: 0;
+    margin-bottom: 0;
+    padding: 2em 1em 12em 1em;
 }
 
 #login h1,#signup h1{
     font-size: 25px;
-    padding: 2em 0 0em 0;
-    margin: 3em 0 .4em 0em ;
+    padding: 2em 6px .3em 12px;
+    margin: 1em 0 .4em 0em;
     opacity: 0.7;
     color: #000;
-    text-align: center;
+    text-align: left;
 }
 
 #login span#remember{
@@ -337,14 +348,12 @@ button[type="submit"]:hover{
 #admin nav .menu{
     display: none;
 }
+
+#admin-login {
+    margin: 3em 0;
+}
 /******************** Menu **********/
 /***Das#board - sidebar **/
-#admin  {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-    font-family: "Bree Serif", sans-serif;
-}
 
 .container{
     position: relative;
@@ -527,7 +536,7 @@ section#board{
     width: 7.8em;
 }
 
-button[type="submit"]{
+#board button[type="submit"]{
     color: #3e3b46;
     height: 40px;
     width: 25%;
@@ -536,7 +545,7 @@ button[type="submit"]{
     transition : all 0.5s;
     margin-top: .3em;
 }
-button[type="submit"]:hover{
+#board button[type="submit"]:hover{
     opacity: 0.8;
     cursor: pointer;
 } 
@@ -848,13 +857,11 @@ span:hover {
         overflow: hidden;
         padding: 0;
         text-align: right;
+        background-color: #13212a;
         margin: 0;
         transition: all 1s;
     }
 
-    nav.black ul {
-        background: #36373b;
-    }
 
     nav ul li {
         display: inline-block;
@@ -949,11 +956,10 @@ span:hover {
     /* footer */
     #footer{
         padding: 2em;
-        background: #1a2025;
+        background: #13212a;
         color: #fff;
         font-size: 1.5em;
         text-align: center;
-        height: 250px;;
     }
     
     footer a {
@@ -983,32 +989,39 @@ button[type="submit"]{
     font-size: 1em;
     border: none;
     color: #ffffff;
+    background-color: #13212a;
     border-radius: 5px;
     height: 40px;
-    width: 15%;
-    background-color: rgba(148, 180, 185, 0.75);
+    width: 30%;
     float: right;
     transition : all 0.5s;
 }
 button[type="submit"]:hover{
-    opacity: 0.8;
+    opacity: 0.3;
+    cursor: pointer;
 } 
+
+
 
 #login,#signup {
     position: relative;
     display: grid;
     grid-template-columns:  1fr;
     grid-gap: 1em;
-    margin: 0 5em 5em 5em;
-    padding: 0 5em;
+    margin-bottom: 0;
+    padding: 2em 10em 3em 10em;
+}
+
+#login a, #signup a, .login_content a {
+   float: left;
 }
 
 #login h1,#signup h1{
     font-size: 1.9em;
-    padding: 2em 0 0.5em 0;
-    margin: 2em 0 0 0 ;
+    padding: 1em 6px 0em 0;
+    margin: 2em 0 .5em 0 ;
     opacity: 0.7;
-    color: #000;
+    color: rgba(0, 0, 0, 0.801);
 }
 
 /******************* Admin ***************/
@@ -1020,9 +1033,7 @@ button[type="submit"]:hover{
 }
 
 /********************* Dashboard Table Section ****/
-nav ul {
-    background: #1a2025;
-}
+
 
 .container{
     display: grid;
@@ -1086,7 +1097,7 @@ font-size: 16px;
 #board button[type="submit"]{
     font-size: 15px;
 }
-button[type="submit"]{
+#board button[type="submit"]{
     color: #3e3b46;
     width: 15%;
     background-color: rgba(148, 180, 185, 0.75);
@@ -1134,12 +1145,9 @@ button[type="submit"]{
 
 @media (min-width: 800px) {   
 #login,#signup {
-    position: relative;
-    display: grid;
-    grid-template-columns:  1fr;
-    grid-gap: 1em;
-    margin: 0 10em 5em 10em;
-    padding: 0 5em;
+    
+    margin: 0;
+    padding: 3em 13em 7em 13em;
 }
 
 /***Menu page ***/
@@ -1160,12 +1168,7 @@ section#board{
 
 @media (min-width: 900px) {   
     #login,#signup {
-        position: relative;
-        display: grid;
-        grid-template-columns:  1fr;
-        grid-gap: 1em;
-        margin: 0 15em 7em 15em;
-        padding: 0 5em;
+        padding: 3em 20em 7em 20em;
     }
 
     /*** Menu **/
