--- a/UI/style.css
+++ b/UI/style.css
@@ -75,11 +75,11 @@ nav {
 nav ul {
     max-height: 0px;
     background: #13212a;
+    padding: 0;
     list-style: none;
     overflow: hidden;
     margin: 0;
-    transition: all 1s;
-    
+    transition: all .1s;   
 }
 
 .showing {
@@ -89,8 +89,9 @@ nav ul {
 nav ul li {
     box-sizing: border-box;
     width: 100%;
-    padding: 25px 0;
+    padding: 1.3em 0;
     text-align: center;
+    border-bottom: 1px solid #fbfbfb14;;
 }
 
 
@@ -283,7 +284,7 @@ input[type="password"],
 input[type="email"],
 input[type="tel"],
 button[type="submit"]{
-   border:  #756c5b7e 1px solid;
+   border:  #0808085e 1px solid;
    border-radius: 5px;
    height: 30px;
    width: 90%;
@@ -301,19 +302,30 @@ button[type="submit"]{
     color: #ffffff;
     height: 40px;
     background-color: #13212a;
-    transition : all 0.5s;
+    transition : all ;
     margin-bottom: .3em;
 }
 button[type="submit"]:hover{
     opacity: 0.8;
     cursor: pointer;
-} 
+}
+button[type="submit"]:focus{
+    outline: none;
+}
 
+.form-box{
+    border: 1px solid #271e2b8a;
+    margin: 4em 0 6em 0;
+    padding: 0 2em 4em 2em;
+    background: #fff;
+}
 
 #login,#signup {
     position: relative;
     margin-bottom: 0;
-    padding: 2em 1em 12em 1em;
+    padding: 2em 1em 0 1em;
+    height: 100vh;
+    background-color: #00000094;
 }
 
 #login h1,#signup h1{
@@ -986,18 +998,18 @@ input[type="tel"]{
    height: 30px;
    width: 100%;
    padding: 4px 6px;
-   font-size: 1em;
+   font-size: .9em;
 }
 
 button[type="submit"]{
     padding:0px 10px 2px 10px;
-    font-size: 1em;
+    font-size: .9em;
     border: none;
     color: #ffffff;
     background-color: #13212a;
     border-radius: 5px;
     height: 40px;
-    width: 30%;
+    width: 35%;
     float: right;
     transition : all 0.5s;
 }
@@ -1014,7 +1026,7 @@ button[type="submit"]:hover{
     grid-template-columns:  1fr;
     grid-gap: 1em;
     margin-bottom: 0;
-    padding: 2em 10em 3em 10em;
+    padding: 2em 10em 0 10em;
 }
 
 #login a, #signup a, .login_content a {
@@ -1051,7 +1063,7 @@ button[type="submit"]:hover{
 .dashboard .menu-icon {
    background:  #1a2025;
    position: fixed;
-   z-index: 2
+   z-index: 2;
 }
 
 .menu-sidebar {
@@ -1153,7 +1165,7 @@ font-size: 16px;
 #login,#signup {
     
     margin: 0;
-    padding: 3em 13em 7em 13em;
+    padding: 3em 13em 0 13em;
 }
 
 /***Menu page ***/
@@ -1174,7 +1186,7 @@ section#board{
 
 @media (min-width: 900px) {   
     #login,#signup {
-        padding: 3em 20em 7em 20em;
+        padding: 3em 15em 0 15em
     }
 
     /*** Menu **/
