--- a/UI/style.css
+++ b/UI/style.css
@@ -13,6 +13,12 @@ body {
     box-sizing: border-box;
 }
 
+*,*:before,*:after{
+	-webkit-user-select:none;
+	-moz-user-select:none;
+	-ms-user-select:none;
+}
+
 img {
     display: block;
     width: 100%;
@@ -27,10 +33,10 @@ h1, h2, h3{
 
 p {
     margin: 0;
-    padding: 1em 0;
     text-align: center;
-    font-size: 1em;
-    font-family: 'Cookie',cursive;
+    font-size: .65em;
+    line-height: 1.4em;
+    word-spacing: .25em;
 }
 
 a.btn{
@@ -292,9 +298,6 @@ button[type="submit"]{
    font-size: .8em;
 }
 
-input[type='checkbox']{
-    margin-right: 20em;
-}
 #remember {
     text-align: left;
 }
@@ -312,6 +315,7 @@ button[type="submit"]:hover{
 button[type="submit"]:focus{
     outline: none;
 }
+
 
 .form-box{
     border: 1px solid #271e2b8a;
@@ -350,8 +354,9 @@ button[type="submit"]:focus{
     text-decoration: none;
     color: #13212a;
     transition : all 0.5s;
-    font-size: .9em;
-    margin-top: .8em;
+    font-size: .8em;   
+    margin-top: .9em;
+    padding-left: 0em;
 }
 #login a:hover,#signup a:hover,.login_content a:hover{
     opacity: 0.7;
@@ -927,6 +932,13 @@ span:hover {
         z-index: -2;
         transition: all .5s;
     }
+    p{
+        margin: 0;
+        padding: 1em .5em;
+        text-align: center;
+        line-height: 1.4em;
+        word-spacing: .25em;
+    }
 
     /*Main */
     /*section a */
@@ -935,6 +947,9 @@ span:hover {
         color: #333;
         padding: 0 1.5em 2em 1.5em;
         font-size: 1.6em;
+    }
+    #section-a p{
+        padding: 1em 9em;
     }
     .content-wrap{
         padding: 0;
@@ -948,10 +963,10 @@ span:hover {
     }
     .box h3{
         padding-bottom: .8em;
-        font-size: 1.5em
+        font-size: 1.5em;
     }
     .box p{
-        font-size: 1.6em;
+        font-size: .9em;
     }
 
     /*section c */
@@ -969,6 +984,7 @@ span:hover {
         padding: 1.5em 2.5em;
         margin: 17em 0 0 0;
     }
+
     
     /* footer */
     #footer{
@@ -1028,7 +1044,11 @@ button[type="submit"]:hover{
     margin-bottom: 0;
     padding: 2em 10em 0 10em;
 }
-
+#login form, #signup form {
+    width: 17em;
+    padding: 0;
+    margin: 0 auto;
+}
 #login a, #signup a, .login_content a {
    float: left;
 }
@@ -1040,6 +1060,8 @@ button[type="submit"]:hover{
     opacity: 0.7;
     color: rgba(0, 0, 0, 0.801);
 }
+
+
 
 /******************* Admin ***************/
 #admin nav ul {
@@ -1213,5 +1235,19 @@ section#board{
 #addMeal_content,#editMeal_content{
     margin: 7% auto 15% auto;
 }
+}
 
+@media (min-width: 1000px) {
+    .form-box {
+        border: 1px solid #271e2b8a;
+        margin: 4em 0 6em 0;
+        padding: 0 7em 4em 7em;
+        background: #fff;
+    }
+
+    button[type="submit"] {
+        font-size: .9em;
+        width: 6em;
+        padding: 0;
+    }
 }
