--- a/UI/styles/style.css
+++ b/UI/styles/style.css
@@ -244,7 +244,7 @@ header #showcase {
   text-align: center; }
   #footer p {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 1em; }
+    font-size: .8em; }
   #footer a {
     text-decoration: none; }
   #footer .fa {
@@ -276,8 +276,10 @@ button[type="submit"] {
     input[type="email"],
     input[type="tel"],
     button[type="submit"] {
-      width: 100%;
-      font-size: .9em; } }
+      width: 90%;
+      font-size: .9em;
+      padding: 4px 0px 4px 6px;
+      margin-right: 16px; } }
   @media only screen and (min-width: 900px) {
     input[type="text"],
     input[type="password"],
