--- a/UI/scss/style.scss
+++ b/UI/scss/style.scss
@@ -231,7 +231,7 @@ header {
     text-align: center;
     p {
         font-family: Arial, Helvetica, sans-serif;
-        font-size: 1em;
+        font-size: .8em;
        
     }
     a {
@@ -269,8 +269,10 @@ button[type="submit"]{
    padding: 4px 6px;
    font-size: .8em;
     @media only screen and (min-width: 700px) {
-        width: 100%;
+        width: 90%;
         font-size: .9em;
+        padding: 4px 0px 4px 6px;
+        margin-right: 16px;
     }
     @media only screen and (min-width: 900px) {
         font-size: 1.1em;
