--- a/UI/scss/mixins.scss
+++ b/UI/scss/mixins.scss
@@ -181,6 +181,7 @@
         td#total {
             text-align: right;
             font-weight: bold;
+            padding-right: 1em;
         }
     }
     label{
@@ -197,13 +198,13 @@
         border-radius: 5px;
         height: 30px;
         padding: 4px 6px;
-        font-size: 13px;
+        font-size: 12px;
         @media only screen and (min-width: 700px) {
             font-size: 14px;
         }
     }
     input[type="date"]{
-        padding: 0 1px;
+        padding: 0;
         width: 7.8em;
     }
     button[type="submit"]{
