--- a/UI/scss/style.scss
+++ b/UI/scss/style.scss
@@ -395,26 +395,28 @@ button[type="submit"]{
         display: grid;
         grid-template-columns: 30% 70%;
     }
+    @media only screen and (min-width: 900px) {
+        display: grid;
+        grid-template-columns: 20% 80%;
+    }
     .dashboard{
         @include dashboard;
     }
     .mainboard{
         @media only screen and (min-width: 700px) {
-            margin-left: 3%;
         }
         #board {
             margin: 0 auto;
             position: relative;
             height: 100vh;   
-            padding: 9em 0 0 0;
+            padding: 6em 0 0 0;
             width :90%;
             z-index:1;
             border-radius:5px;
             color:#3e3b46;
             font-size:12px;
             @media only screen and (min-width: 700px) {
-                font-size: 15px;
-                margin: 0;
+                font-size: 15px;    
             }
             @include board;
 
@@ -561,17 +563,12 @@ button[type="submit"]{
         border-bottom: 1px solid #1a2025;
     }
     p:nth-child(2){
-        padding: 1.5em 0 .5em 0em;
+        padding: 1.5em 0 .6em 0em;
         width: 100%;
-        text-align: center;
+        font-size: 1.1em;
+        text-align: center
     }
-    i{
-        position: relative;
-        top: -0.2em;
-        font-size:2em;
-        padding: 0;
-        float: left;
-    }
+
 
     a{
         padding: 1em 0px;
