--- a/UI/scss/mixins.scss
+++ b/UI/scss/mixins.scss
@@ -179,7 +179,7 @@
             padding: 7px 0px;
             text-align:center;
             @media only screen and (min-width: 700px) {
-                padding: 1em .33em;
+                padding: 1em 0em;
             }
         }
         td#total {
