--- a/UI/scss/style.scss
+++ b/UI/scss/style.scss
@@ -135,7 +135,7 @@ header {
     }
 }
 
-#section-a{
+#service{
     background: #eaeaea;
     color: #333;
     padding: 1em 1.5em 2em 1.5em;
@@ -156,7 +156,7 @@ header {
     }
 }
 
-#section-b{
+#food_showcase{
     padding: 2em 1em 1em;
     background: $white;
     color: #333;
@@ -181,7 +181,7 @@ header {
      }
 }
 
-#section-c{
+#connect{
     min-height: 400px;
     color: $white;
     text-align: center;
