--- a/UI/styles/style.css
+++ b/UI/styles/style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Kanit', sans-serif;
   background: #fff;
   color: #fff;
   font-size: 1.1em;
@@ -37,6 +37,8 @@ header nav {
     color: #fff;
     display: block;
     cursor: pointer; }
+    header nav .menu-icon i.fa {
+      color: #75646c; }
     @media only screen and (min-width: 700px) {
       header nav .menu-icon {
         display: none; } }
@@ -53,7 +55,7 @@ header nav {
         font-size: 24px; } }
   header nav ul {
     max-height: 0px;
-    background: #13212a;
+    background: #a2958f;
     padding: 0;
     list-style: none;
     overflow: hidden;
@@ -77,8 +79,8 @@ header nav {
     @media only screen and (min-width: 700px) {
       header nav li {
         display: inline-block;
-        padding: 20px;
-        width: 7em; } }
+        padding: 20px 0;
+        width: 5em; } }
     header nav li a {
       text-decoration: none;
       color: rgba(255, 255, 255, 0.7);
@@ -238,7 +240,7 @@ header #showcase {
 /* footer */
 #footer {
   padding: 2em;
-  background: #13212a;
+  background: #a2958f;
   color: #fff;
   font-size: 1.2em;
   text-align: center; }
@@ -289,7 +291,7 @@ button[type="submit"] {
 button[type="submit"] {
   color: #ffffff;
   height: 40px;
-  background-color: #13212a;
+  background-color: #c5b8b2;
   -webkit-transition: all 0.5s;
   -o-transition: all 0.5s;
   transition: all 0.5s;
@@ -308,10 +310,10 @@ button[type="submit"] {
       transition: all 0.5s; } }
   @media only screen and (min-width: 900px) {
     button[type="submit"] {
-      font-size: 1.1em; } }
+      font-size: .9em; } }
   @media only screen and (min-width: 1000px) {
     button[type="submit"] {
-      font-size: 1.1em;
+      font-size: .9em;
       width: 6em; } }
   button[type="submit"]:hover {
     opacity: 0.8;
@@ -321,9 +323,12 @@ button[type="submit"] {
 
 .form-box {
   border: 1px solid rgba(39, 30, 43, 0.7);
-  margin: 4em 0 0em 0;
+  margin: 4em 2em 7em 2em;
   padding: 0 2em 3em 2em;
   background: #fff; }
+  @media only screen and (min-width: 1000px) {
+    .form-box {
+      margin: 4em 4em 7em 4em; } }
 
 #login, #signup {
   position: relative;
@@ -360,7 +365,7 @@ button[type="submit"] {
         color: rgba(0, 0, 0, 0.801); } }
     @media only screen and (min-width: 900px) {
       #login h1, #signup h1 {
-        font-size: 2.1em; } }
+        font-size: 1.8em; } }
   #login a, #signup a {
     text-decoration: none;
     color: #13212a;
@@ -375,7 +380,7 @@ button[type="submit"] {
         float: left; } }
     @media only screen and (min-width: 900px) {
       #login a, #signup a {
-        font-size: 1em; } }
+        font-size: .9em; } }
     #login a:hover, #signup a:hover {
       opacity: 0.7;
       cursor: pointer; }
@@ -391,7 +396,7 @@ button[type="submit"] {
 
 .container {
   position: relative;
-  background-color: #ededed;
+  background-color: #ead2c6;
   padding: 0; }
   @media only screen and (min-width: 700px) {
     .container {
@@ -427,9 +432,11 @@ button[type="submit"] {
     color: #fff;
     display: block;
     cursor: pointer;
-    background: #1a2025;
+    background: #c5b8b2;
     position: fixed;
     z-index: 2; }
+    .container .dashboard .menu-icon i.fa {
+      color: #75646c; }
     @media only screen and (min-width: 700px) {
       .container .dashboard .menu-icon {
         display: none; } }
@@ -445,7 +452,7 @@ button[type="submit"] {
     z-index: 3;
     height: 100vh;
     padding: 5em 0em;
-    background: #13212a;
+    background: #a2958f;
     text-align: center;
     -webkit-transform-origin: left;
     -ms-transform-origin: left;
@@ -524,7 +531,7 @@ button[type="submit"] {
       .container .mainboard #board table thead {
         font-weight: bold;
         text-align: center;
-        background-color: rgba(148, 180, 185, 0.75); }
+        background-color: #c5b8b2; }
         @media only screen and (min-width: 700px) {
           .container .mainboard #board table thead {
             font-size: 16px; } }
@@ -603,7 +610,7 @@ button[type="submit"] {
       color: #3e3b46;
       height: 40px;
       width: 25%;
-      background-color: rgba(148, 180, 185, 0.75);
+      background-color: #c5b8b2;
       float: right;
       -webkit-transition: all 0.5s;
       -o-transition: all 0.5s;
